syntaxes/antlr/Generated/PreprocessorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/Users/kuznetsovid/Desktop/Projects/ReSDK_VSCodeExtension/syntaxes/antlr/Preprocessor.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class PreprocessorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		COMMENT=1, WS=2, PREP_PREFIX=3, NL=4, INCLUDE=5, DEFINE=6, UNDEFINE=7, 
		IF=8, IFN=9, ELSE=10, ENDIF=11, LPAREN=12, RPAREN=13, COMMA=14, STRING=15, 
		ID=16, LETTER=17, INT=18, OTHER=19;
	public const int
		RULE_start = 0, RULE_preprocessorStatement = 1, RULE_include = 2, RULE_define = 3, 
		RULE_macroArgs = 4, RULE_undefine = 5, RULE_prepIf = 6, RULE_error = 7, 
		RULE_other = 8;
	public static readonly string[] ruleNames = {
		"start", "preprocessorStatement", "include", "define", "macroArgs", "undefine", 
		"prepIf", "error", "other"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, "'#'", "'\\n'", "'#include'", "'#define'", "'#undef'", 
		"'#ifdef'", "'#ifndef'", "'#else'", "'#endif'", "'('", "')'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "COMMENT", "WS", "PREP_PREFIX", "NL", "INCLUDE", "DEFINE", "UNDEFINE", 
		"IF", "IFN", "ELSE", "ENDIF", "LPAREN", "RPAREN", "COMMA", "STRING", "ID", 
		"LETTER", "INT", "OTHER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Preprocessor.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PreprocessorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PreprocessorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PreprocessorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class StartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PreprocessorParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorStatementContext[] preprocessorStatement() {
			return GetRuleContexts<PreprocessorStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorStatementContext preprocessorStatement(int i) {
			return GetRuleContext<PreprocessorStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OtherContext[] other() {
			return GetRuleContexts<OtherContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OtherContext other(int i) {
			return GetRuleContext<OtherContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(PreprocessorParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(PreprocessorParser.NL, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1048574L) != 0)) {
				{
				State = 31;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 18;
					preprocessorStatement();
					State = 27;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
					while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							State = 20;
							ErrorHandler.Sync(this);
							_la = TokenStream.LA(1);
							do {
								{
								{
								State = 19;
								Match(NL);
								}
								}
								State = 22;
								ErrorHandler.Sync(this);
								_la = TokenStream.LA(1);
							} while ( _la==NL );
							State = 24;
							preprocessorStatement();
							}
							} 
						}
						State = 29;
						ErrorHandler.Sync(this);
						_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
					}
					}
					break;
				case 2:
					{
					State = 30;
					other();
					}
					break;
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 36;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreprocessorStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IncludeContext include() {
			return GetRuleContext<IncludeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DefineContext define() {
			return GetRuleContext<DefineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UndefineContext undefine() {
			return GetRuleContext<UndefineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrepIfContext prepIf() {
			return GetRuleContext<PrepIfContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ErrorContext error() {
			return GetRuleContext<ErrorContext>(0);
		}
		public PreprocessorStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preprocessorStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreprocessorStatementContext preprocessorStatement() {
		PreprocessorStatementContext _localctx = new PreprocessorStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_preprocessorStatement);
		try {
			State = 43;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INCLUDE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 38;
				include();
				}
				break;
			case DEFINE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 39;
				define();
				}
				break;
			case UNDEFINE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 40;
				undefine();
				}
				break;
			case IF:
			case IFN:
				EnterOuterAlt(_localctx, 4);
				{
				State = 41;
				prepIf();
				}
				break;
			case PREP_PREFIX:
				EnterOuterAlt(_localctx, 5);
				{
				State = 42;
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeContext : ParserRuleContext {
		public IToken file;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INCLUDE() { return GetToken(PreprocessorParser.INCLUDE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(PreprocessorParser.STRING, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_include; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterInclude(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitInclude(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInclude(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncludeContext include() {
		IncludeContext _localctx = new IncludeContext(Context, State);
		EnterRule(_localctx, 4, RULE_include);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 45;
			Match(INCLUDE);
			State = 46;
			_localctx.file = Match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DefineContext : ParserRuleContext {
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(PreprocessorParser.DEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(PreprocessorParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MacroArgsContext macroArgs() {
			return GetRuleContext<MacroArgsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(PreprocessorParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(PreprocessorParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Eof() { return GetTokens(PreprocessorParser.Eof); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof(int i) {
			return GetToken(PreprocessorParser.Eof, i);
		}
		public DefineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_define; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterDefine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitDefine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDefine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DefineContext define() {
		DefineContext _localctx = new DefineContext(Context, State);
		EnterRule(_localctx, 6, RULE_define);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			Match(DEFINE);
			State = 49;
			_localctx.name = Match(ID);
			State = 51;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 50;
				macroArgs();
				}
				break;
			}
			State = 56;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 53;
					_la = TokenStream.LA(1);
					if ( _la <= 0 || (_la==Eof || _la==NL) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					} 
				}
				State = 58;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MacroArgsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(PreprocessorParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(PreprocessorParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(PreprocessorParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(PreprocessorParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(PreprocessorParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(PreprocessorParser.COMMA, i);
		}
		public MacroArgsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_macroArgs; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterMacroArgs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitMacroArgs(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMacroArgs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MacroArgsContext macroArgs() {
		MacroArgsContext _localctx = new MacroArgsContext(Context, State);
		EnterRule(_localctx, 8, RULE_macroArgs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59;
			Match(LPAREN);
			State = 60;
			Match(ID);
			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 61;
				Match(COMMA);
				State = 62;
				Match(ID);
				}
				}
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 68;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UndefineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNDEFINE() { return GetToken(PreprocessorParser.UNDEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(PreprocessorParser.ID, 0); }
		public UndefineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_undefine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterUndefine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitUndefine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUndefine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UndefineContext undefine() {
		UndefineContext _localctx = new UndefineContext(Context, State);
		EnterRule(_localctx, 10, RULE_undefine);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			Match(UNDEFINE);
			State = 71;
			Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrepIfContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(PreprocessorParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDIF() { return GetToken(PreprocessorParser.ENDIF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(PreprocessorParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IFN() { return GetToken(PreprocessorParser.IFN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorStatementContext[] preprocessorStatement() {
			return GetRuleContexts<PreprocessorStatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PreprocessorStatementContext preprocessorStatement(int i) {
			return GetRuleContext<PreprocessorStatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(PreprocessorParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(PreprocessorParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELSE() { return GetToken(PreprocessorParser.ELSE, 0); }
		public PrepIfContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prepIf; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterPrepIf(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitPrepIf(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrepIf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrepIfContext prepIf() {
		PrepIfContext _localctx = new PrepIfContext(Context, State);
		EnterRule(_localctx, 12, RULE_prepIf);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			_la = TokenStream.LA(1);
			if ( !(_la==IF || _la==IFN) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 74;
			Match(ID);
			State = 83;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 76;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					do {
						{
						{
						State = 75;
						Match(NL);
						}
						}
						State = 78;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					} while ( _la==NL );
					State = 80;
					preprocessorStatement();
					}
					} 
				}
				State = 85;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			State = 87;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 86;
					Match(NL);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 89;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ELSE) {
				{
				State = 91;
				Match(ELSE);
				State = 100;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 93;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
						do {
							{
							{
							State = 92;
							Match(NL);
							}
							}
							State = 95;
							ErrorHandler.Sync(this);
							_la = TokenStream.LA(1);
						} while ( _la==NL );
						State = 97;
						preprocessorStatement();
						}
						} 
					}
					State = 102;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
				}
				}
			}

			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NL) {
				{
				{
				State = 105;
				Match(NL);
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 111;
			Match(ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ErrorContext : ParserRuleContext {
		public IToken instruction;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PREP_PREFIX() { return GetToken(PreprocessorParser.PREP_PREFIX, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(PreprocessorParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(PreprocessorParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(PreprocessorParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(PreprocessorParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Eof() { return GetTokens(PreprocessorParser.Eof); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof(int i) {
			return GetToken(PreprocessorParser.Eof, i);
		}
		public ErrorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_error; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterError(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitError(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitError(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ErrorContext error() {
		ErrorContext _localctx = new ErrorContext(Context, State);
		EnterRule(_localctx, 14, RULE_error);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			Match(PREP_PREFIX);
			State = 114;
			_localctx.instruction = TokenStream.LT(1);
			_la = TokenStream.LA(1);
			if ( !(_la==STRING || _la==ID) ) {
				_localctx.instruction = ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 118;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,15,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 115;
					_la = TokenStream.LA(1);
					if ( _la <= 0 || (_la==Eof || _la==NL) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
						ErrorHandler.ReportMatch(this);
					    Consume();
					}
					}
					} 
				}
				State = 120;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,15,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OtherContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL() { return GetToken(PreprocessorParser.NL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PreprocessorParser.Eof, 0); }
		public OtherContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_other; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.EnterOther(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IPreprocessorListener typedListener = listener as IPreprocessorListener;
			if (typedListener != null) typedListener.ExitOther(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPreprocessorVisitor<TResult> typedVisitor = visitor as IPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOther(this);
			else return visitor.VisitChildren(this);
		}
	}
